--- a/_src/_includes/_scss/main.scss
+++ b/_src/_includes/_scss/main.scss
@@ -57,18 +57,18 @@ body {
 
 img,
 video,
+iframe,
 svg {
-	height: 100%;
-	object-position: center;
+	width: 100%;
+	user-select: none;
 }
 
 img,
 video,
-iframe,
 svg {
-	width: 100%;
-	max-height: 100%;
-	user-select: none;
+	height: 100%;
+	object-fit: cover;
+	object-position: center;
 }
 
 img:not([src*="png"]):not([src*="svg"]),
